--- a/style-menu.css
+++ b/style-menu.css
@@ -1,13 +1,19 @@
-nav{
+.nav {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
-    width: 200px;
-    background-color: #2a2828;
+    padding: 30px;
+    width: 100%;
+    height: 10%;
+    background-color: #000000e7;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border-right: 1px solid #000000;
     z-index: 10;
-    transition: all 250ms linear;
-
+    transition: all 0.3s ease;
+    flex-direction: row;
 }
 
 .nav ul {
@@ -15,38 +21,81 @@ nav{
     padding: 0;
     margin: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
+    align-items: center;
+    width: 100%;
     height: 100%;
     text-align: center;
     transition: all 250ms linear;
-
 }
 
 .nav ul li {
-    margin: 10px 0;
+    margin: 0 10px;
     transition: all 250ms linear;
-
 }
 
 .nav ul li a {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins' sans-serif;
     font-size: 1.5rem;
     text-transform: uppercase;
     line-height: 1.2;
     font-weight: 800;
     display: inline-block;
     position: relative;
-    color: rgb(250, 250, 250); /* Set text color to transparent white */
+    color: rgb(255, 255, 255);
     transition: all 250ms linear;
+}
 
+.nav ul li a:hover {
+    display: block;
+        position: relative;
+        padding: 0.2em 0;
 }
 
 /* Add this rule for navigation links on hover */
-.nav ul li a:hover {
+.nav ul li a:hover::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #646464;
+    /* Pink color */
+    visibility: visible;
+    transition: all 0.3s;
+}
+
+/* Add this rule for navigation links on hover */
+.nav ul li a:hover::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #646464;
+    visibility: visible;
+    transition: all 0.3s;
+}
+
+/* Add this rule for navigation links on hover */
+.nav ul li a:hover::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff9f9;
+    visibility: visible;
+    transition: all 0.3s;
+}
+.nav ul li a:focus {
     text-decoration: none;
-    color: #646464; /* Pink color */
-    opacity: 1; /* Set opacity to 1 on hover */
+    color: #ffffff;
+    opacity: 1;
 }
 
 .menu-icon {
@@ -88,14 +137,14 @@ nav{
 }
 
 .menu-icon:checked + label + .nav ul li a {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.5rem;
+    font-family: 'popins' sans-serif;
+   font-size: 1.5rem;
     text-transform: uppercase;
     line-height: 1.2;
     font-weight: 800;
     display: inline-block;
     position: relative;
-    color: rgb(250, 250, 250); /* Set text color to transparent white */
+    color: rgb(250, 250, 250); 
     transition: all 250ms linear;
 
 }
@@ -124,9 +173,7 @@ nav{
 /* CSS pour afficher/cacher le menu en fonction de l'état de la case à cocher */
 .menu-icon {
         --s: 20px;
-        /* control the size */
         --c: black;
-        /* the color */
 
         height: var(--s);
         aspect-ratio: 1;
@@ -146,7 +193,7 @@ nav{
             40% 100%;
         position: relative;
         clip-path: inset(0 25%);
-        -webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
+        --webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
         cursor: pointer;
         transition:
             background-position .3s var(--_s, .3s),
@@ -166,12 +213,13 @@ nav{
         transition: transform .3s calc(.3s - var(--_s, .3s));
 
     }
+
     .menu-icon:after {
         content: "";
         position: absolute;
         border-radius: var(--s);
         inset: 40% 0;
-        background: white;
+        background: rgb(29, 28, 28);
         transition: transform .3s calc(.3s - var(--_s, .3s));
 
     }
@@ -193,7 +241,7 @@ nav{
 
     .menu-icon:focus-visible {
         clip-path: none;
-        -webkit-mask: none;
+        --webkit-mask: none;
         border: none;
         outline: 2px solid var(--c);
         outline-offset: 5px;
@@ -208,7 +256,6 @@ nav{
 
     .menu-icon:not(:checked)+label+.nav {
         right: -100%;
-        /* Cache le menu en déplaçant complètement hors de l'écran */
         transition: all 250ms linear;
         content: icon-menu;
     }
@@ -219,10 +266,37 @@ nav{
 
     .nav {
         width: 100%;
-        background-color: #393939;
+        height: 100%;
+        background-color: #000000;
         z-index: 10;
         transition: all 250ms linear;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav ul {
+        display: none;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        text-align: center;
+        transition: all 250ms linear;
+    }
 
+    .nav ul li {
+        margin: 10px 0;
+        transition: all 250ms linear;
+    }
+
+
+    .menu-icon {
+        display: block;
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        z-index: 12;
+        cursor: pointer;
+        transition: all 250ms linear;
     }
 
     .menu-icon {
@@ -233,18 +307,28 @@ nav{
         z-index: 12;
         cursor: pointer;
         transition: all 250ms linear;
-
     }
-
-    .menu-icon {
-        display: block;
-        position: fixed;
-        top: 30px;
-        right: 30px;
-        z-index: 12;
-        cursor: pointer;
-        transition: all 250ms linear;
-
+    
+    .menu-icon:checked:before {
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 20px;
+        background-color: #ffffff;
+        top: calc(50% - 10px);
+        left: calc(50% - 1px);
+        transform: rotate(45deg);
+    }
+    
+    .menu-icon:checked:after {
+        content: "";
+        position: absolute;
+        width: 2px;
+        height: 20px;
+        background-color: #ffffff;
+        top: calc(50% - 10px);
+        left: calc(50% - 1px);
+        transform: rotate(-45deg);
     }
 
     .menu-icon:checked + label {
@@ -256,13 +340,11 @@ nav{
         background-color: rgba(0, 0, 0, 0.5);
         z-index: 9;
         transition: all 250ms linear;
-
     }
 
     .menu-icon:checked + label + .nav {
         right: 0;
         transition: all 250ms linear;
-
     }
 
     .menu-icon:checked + label + .nav ul {
@@ -272,33 +354,29 @@ nav{
         height: 100%;
         text-align: center;
         transition: all 250ms linear;
-
     }
 
     .menu-icon:checked + label + .nav ul li {
         margin: 10px 0;
         transition: all 250ms linear;
-
     }
 
     .menu-icon:checked + label + .nav ul li a {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'popins' sans-serif;
         font-size: 1.5rem;
         text-transform: uppercase;
         line-height: 1.2;
         font-weight: 800;
         display: inline-block;
         position: relative;
-        color: rgb(250, 250, 250); /* Set text color to transparent white */
+        color: rgb(250, 250, 250);
         transition: all 250ms linear;
-
     }
 
     .menu-icon:checked + label + .nav ul li a:hover {
         text-decoration: none;
-        color: #646464; /* Pink color */
-        opacity: 1; /* Set opacity to 1 on hover */
+        color: #646464; 
+        opacity: 1; 
     }
-
     
 }
