--- a/style1.css
+++ b/style1.css
@@ -51,7 +51,7 @@ ul {
     padding: 0 30px;
     opacity: 1;
     position: fixed;
-    left: 15px;
+    left: 0px;
     top: 0;
     right: 0;
     bottom: 0;
@@ -161,6 +161,22 @@ ul {
 }
 
 .btn:hover {
+    transform: scale(1.05);
+}
+
+.btn2{
+    font-size: 10px;
+        padding: 5px 5px;
+        color: white;
+        border-radius: 40px;
+        display: inline-block;
+        white-space: nowrap;
+        border: none;
+        background: black;
+        transition: all 0.3s ease;
+}
+
+.btn2:hover {
     transform: scale(1.05);
 }
 
