--- a/style1.css
+++ b/style1.css
@@ -194,7 +194,7 @@ ul {
     top: 0;
     padding: 30px;
     height: 100%;
-    border-right: 1px solid var(--skin-color);
+    border-right: 1px solid #151515;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -384,8 +384,8 @@ h3.my-profession {
     position: absolute;
     height: 80px;
     width: 80px;
-    border-bottom: 10px solid var(--skin-color);
-    border-right: 10px solid var(--skin-color);
+    border-bottom: 10px solid #000;
+    border-right: 10px solid #000;
     right: 20px;
     bottom: -40px;
 }
@@ -395,8 +395,8 @@ h3.my-profession {
     position: absolute;
     height: 80px;
     width: 80px;
-    border-top: 10px solid var(--skin-color);
-    border-left: 10px solid var(--skin-color);
+    border-top: 10px solid #000;
+    border-left: 10px solid #000;
     left: -20px;
     top: -40px;
 }
