--- a/style-menu.css
+++ b/style-menu.css
@@ -5,16 +5,21 @@
     bottom: 0;
     padding: 30px;
     width: 100%;
-    height: 10%;
-    background-color: #000000e7;
-    justify-content: center;
+    height: 5%;
+    background-color: #fbfbfb97;
+        justify-content: space-between;
+            /* Changed from flex-end to space-between */
     display: flex;
     align-items: center;
     border-right: 1px solid #000000;
     z-index: 10;
     transition: all 0.3s ease;
     flex-direction: row;
+    text-align: right; /* Changed from center to right */
+    transition: all 250ms linear;
+    border-block-end: 2px solid #000;
 }
+
 
 .nav ul {
     list-style: none;
@@ -24,33 +29,45 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 50%;
     text-align: center;
     transition: all 250ms linear;
+
 }
 
 .nav ul li {
     margin: 0 10px;
     transition: all 250ms linear;
+    display: inline-block;
+    position: relative;
+    padding: 0.2em 0;
+    text-align: left;
+        position: relative;
+            /* Make the parent relative */
 }
 
 .nav ul li a {
-    font-family: 'Poppins' sans-serif;
-    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
     text-transform: uppercase;
-    line-height: 1.2;
+    line-height: 1;
     font-weight: 800;
     display: inline-block;
     position: relative;
-    color: rgb(255, 255, 255);
+    color: rgb(17, 17, 17);
     transition: all 250ms linear;
+    text-decoration: none;
+    opacity: 1;
+    transition: all 0.3s ease;
+    padding: 0.2em 0;
+    
 }
 
 .nav ul li a:hover {
     display: block;
-        position: relative;
-        padding: 0.2em 0;
+    position: relative;
+    padding: 0.2em 0;
 }
 
 /* Add this rule for navigation links on hover */
@@ -61,7 +78,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #646464;
+    background-color: #252323;
     /* Pink color */
     visibility: visible;
     transition: all 0.3s;
@@ -92,11 +109,134 @@
     visibility: visible;
     transition: all 0.3s;
 }
+
+/* Underline effect for active link */
+.nav ul li a.active::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #252323;
+    visibility: visible;
+    transition: all 0.3s;
+}
+
+.nav ul li a.active::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #646464;
+    color: #646464;
+    visibility: visible;
+    transition: all 0.3s;
+}
+
+
 .nav ul li a:focus {
     text-decoration: none;
-    color: #ffffff;
+    color: #646464;
     opacity: 1;
 }
+
+.nav ul li a:hover {
+    text-decoration: none;
+    color: #646464;
+    opacity: 1;
+}
+
+.nav ul li a::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff9f9;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+.nav ul li a::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #fff9f9;
+    visibility: hidden;
+    transition: all 0.3s;
+}
+
+
+/* Styles for the logo */
+.nav-logo {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    text-decoration: none;
+}
+
+.nav-logo svg {
+    width: 15px;
+    height: 15px;
+    margin-right: 10px;
+}
+.nav-logo a {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    /* taille de police ajustée */
+    text-transform: uppercase;
+    color: #000000;
+    display: block;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.nav-logo:hover {
+    color: #666;
+}
+
+/* Hide the submenu by default */
+
+.nav ul li ul.submenu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+    width: 100px;
+    border-top: none;
+    transition: all 0.3s ease;
+
+}
+
+.nav ul li ul.submenu li {
+    width: 150px;
+    margin: 0;
+    padding: 0;
+    display: block;
+    text-align: left;
+    transition: all 0.3s ease;
+    background-color: #fff;
+}
+
+.nav ul li ul.submenu li a {
+    padding: 10px 20px;
+    color: rgb(0, 0, 0);
+    display: block;
+    text-align: left;
+}
+
+.nav ul li:hover ul.submenu {
+    display: block;
+}
+
 
 .menu-icon {
     display: none;
@@ -168,13 +308,10 @@
     transition: all 250ms linear;
 
 }
-
 @media screen and (max-width: 991px) {
-/* CSS pour afficher/cacher le menu en fonction de l'état de la case à cocher */
-.menu-icon {
+    .menu-icon {
         --s: 20px;
         --c: black;
-
         height: var(--s);
         aspect-ratio: 1;
         border: none;
@@ -183,35 +320,25 @@
         box-sizing: content-box;
         --_g1: linear-gradient(var(--c) 20%, #0000 0 80%, var(--c) 0) no-repeat content-box border-box;
         --_g2: radial-gradient(circle closest-side at 50% 12.5%, var(--c) 95%, #0000) repeat-y content-box border-box;
-        background:
-            var(--_g2) left var(--_p, 0px) top,
-            var(--_g1) left calc(var(--s)/10 + var(--_p, 0px)) top,
-            var(--_g2) right var(--_p, 0px) top,
-            var(--_g1) right calc(var(--s)/10 + var(--_p, 0px)) top;
-        background-size:
-            20% 80%,
-            40% 100%;
+        background: var(--_g2) left var(--_p, 0px) top, var(--_g1) left calc(var(--s)/10 + var(--_p, 0px)) top, var(--_g2) right var(--_p, 0px) top, var(--_g1) right calc(var(--s)/10 + var(--_p, 0px)) top;
+        background-size: 20% 80%, 40% 100%;
         position: relative;
         clip-path: inset(0 25%);
-        --webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
+        -webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
         cursor: pointer;
-        transition:
-            background-position .3s var(--_s, .3s),
-            clip-path 0s var(--_s, .6s);
+        transition: background-position .3s var(--_s, .3s), clip-path 0s var(--_s, .6s);
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
     }
 
-    .menu-icon:before
-     {
+    .menu-icon:before {
         content: "";
         position: absolute;
         border-radius: var(--s);
         inset: 40% 0;
         background: var(--c);
         transition: transform .3s calc(.3s - var(--_s, .3s));
-
     }
 
     .menu-icon:after {
@@ -221,43 +348,41 @@
         inset: 40% 0;
         background: rgb(29, 28, 28);
         transition: transform .3s calc(.3s - var(--_s, .3s));
-
     }
 
     .menu-icon:checked {
         clip-path: inset(0);
         --_p: calc(-1*var(--s));
         --_s: 0s;
-        
+        color: #fff9f9
     }
 
     .menu-icon:checked:before {
         transform: rotate(45deg);
+        background: #fff;
     }
 
     .menu-icon:checked:after {
         transform: rotate(-45deg);
+        background: #fff;
     }
 
     .menu-icon:focus-visible {
         clip-path: none;
-        --webkit-mask: none;
+        -webkit-mask: none;
         border: none;
         outline: 2px solid var(--c);
         outline-offset: 5px;
     }
 
-
     .menu-icon:checked+label+.nav {
         right: 0;
         transition: all 250ms linear;
-
     }
 
     .menu-icon:not(:checked)+label+.nav {
         right: -100%;
         transition: all 250ms linear;
-        content: icon-menu;
     }
 
     .logo {
@@ -274,6 +399,7 @@
         justify-content: center;
         align-items: center;
     }
+
     .nav ul {
         display: none;
         flex-direction: column;
@@ -288,81 +414,8 @@
         transition: all 250ms linear;
     }
 
-
-    .menu-icon {
-        display: block;
-        position: fixed;
-        top: 30px;
-        right: 30px;
-        z-index: 12;
-        cursor: pointer;
-        transition: all 250ms linear;
-    }
-
-    .menu-icon {
-        display: block;
-        position: fixed;
-        top: 30px;
-        right: 30px;
-        z-index: 12;
-        cursor: pointer;
-        transition: all 250ms linear;
-    }
-    
-    .menu-icon:checked:before {
-        content: "";
-        position: absolute;
-        width: 2px;
-        height: 20px;
-        background-color: #ffffff;
-        top: calc(50% - 10px);
-        left: calc(50% - 1px);
-        transform: rotate(45deg);
-    }
-    
-    .menu-icon:checked:after {
-        content: "";
-        position: absolute;
-        width: 2px;
-        height: 20px;
-        background-color: #ffffff;
-        top: calc(50% - 10px);
-        left: calc(50% - 1px);
-        transform: rotate(-45deg);
-    }
-
-    .menu-icon:checked + label {
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.5);
-        z-index: 9;
-        transition: all 250ms linear;
-    }
-
-    .menu-icon:checked + label + .nav {
-        right: 0;
-        transition: all 250ms linear;
-    }
-
-    .menu-icon:checked + label + .nav ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 100%;
-        text-align: center;
-        transition: all 250ms linear;
-    }
-
-    .menu-icon:checked + label + .nav ul li {
-        margin: 10px 0;
-        transition: all 250ms linear;
-    }
-
-    .menu-icon:checked + label + .nav ul li a {
-        font-family: 'popins' sans-serif;
+    .nav ul li a {
+        font-family: 'Poppins', sans-serif;
         font-size: 1.5rem;
         text-transform: uppercase;
         line-height: 1.2;
@@ -373,10 +426,152 @@
         transition: all 250ms linear;
     }
 
-    .menu-icon:checked + label + .nav ul li a:hover {
+    .nav ul li a:hover {
         text-decoration: none;
-        color: #646464; 
-        opacity: 1; 
+        color: #646464;
+        opacity: 1;
     }
+
+    .menu-icon {
+        display: block;
+        position: fixed;
+        top: 30px;
+        right: 30px;
+        z-index: 12;
+        cursor: pointer;
+        transition: all 250ms linear;
+    }
+
+    .menu-icon:checked+label {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 9;
+        transition: all 250ms linear;
+    }
+
+    .menu-icon:checked+label+.nav ul {
+        display: flex;
+    }
+
+    .menu-icon:checked+label+.nav ul li {
+        margin: 10px 0;
+    }
+
+    
+    .menu-icon:checked+label+.nav ul li a {
+        font-family: 'Poppins', sans-serif;
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        line-height: 1.2;
+        font-weight: 800;
+        display: inline-block;
+        position: relative;
+        color: rgb(250, 250, 250);
+        transition: all 250ms linear;
+    }
+
+    .menu-icon:checked+label+.nav ul li a:hover {
+        text-decoration: none;
+        color: #646464;
+        opacity: 1;
+    }
+
+    .menu-icon:checked+label+.nav ul li a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff9f9;
+        visibility: hidden;
+        transition: all 0.3s;
+    }
+
+    .menu-icon:checked+label+.nav ul li a::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff9f9;
+        visibility: hidden;
+        transition: all 0.3s;
+    }
+
+    /*afficher les sous-menus dans la suite l'une apres l'autre et qu'on puisse voi tous les menu*/
+    .menu-icon:checked+label+.nav ul li ul.submenu {
+        display: block;
+        position: relative;
+        top: 0;
+        left: 0;
+        z-index: 1;
+        width: 100%;
+        border-top: none;
+        transition: all 0.3s ease;
+    }
+
+    .menu-icon:checked+label+.nav ul li ul.submenu li {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: block;
+        text-align: center;
+        transition: all 0.3s ease;
+        background-color: #000000;
+    }
+
+    .menu-icon:checked+label+.nav ul li ul.submenu li a {
+        padding: 10px 20px;
+        color: rgb(250, 250, 250);
+        display: block;
+        text-align: center;
+    }
+
+    .menu-icon:checked+label+.nav ul li:hover ul.submenu {
+        display: block;
+    }
+
+    .menu-icon:checked+label+.nav ul li a.active::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff9f9;
+        visibility: visible;
+        transition: all 0.3s;
+    }
+
+    .menu-icon:checked+label+.nav ul li a.active::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff9f9;
+        visibility: visible;
+        transition: all 0.3s;
+    }
+
+    .menu-icon:checked+label+.nav ul li a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff9f9;
+        visibility: hidden;
+        transition: all 0.3s;
+    }
+    
     
 }
