--- a/style1.css
+++ b/style1.css
@@ -21,9 +21,11 @@ body {
 
     line-height: 1.5;
     font-size: 16px;
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins', sans-serif;    
     transition: all 1.5s ease-in-out;
 }
+
+
 
 * {
     margin: 0;
@@ -111,8 +113,9 @@ ul {
 }
 
 .section-title h2 {
+        font-family: 'Poppins', sans-serif;
     font-size: 40px;
-    color: var(--text-black-900);
+    color: #302e4d;
     font-weight: 700;
     position: relative;
 
@@ -759,7 +762,11 @@ blockquote span {
     color: var(--text-black-700);
     line-height: 25px;
 }
-
+a p {
+    font-size: 16px;
+    color: var(--text-black-700);
+    line-height: 25px;
+}
 
 .overlay {
     visibility: hidden;
