--- a/style-menu.css
+++ b/style-menu.css
@@ -11,13 +11,13 @@
             /* Changed from flex-end to space-between */
     display: flex;
     align-items: center;
-    border-right: 1px solid #000000;
+    border-right: 1px solid #ac31a0;
     z-index: 10;
     transition: all 0.3s ease;
     flex-direction: row;
     text-align: right; /* Changed from center to right */
     transition: all 250ms linear;
-    border-block-end: 2px solid #000;
+    border-block-end: 2px solid #ac31a0;
 }
 
 
@@ -55,7 +55,7 @@
     font-weight: 800;
     display: inline-block;
     position: relative;
-    color: rgb(17, 17, 17);
+    color: rgb(197, 71, 178);
     transition: all 250ms linear;
     text-decoration: none;
     opacity: 1;
@@ -78,7 +78,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #252323;
+    background-color: #efa4d7;
     /* Pink color */
     visibility: visible;
     transition: all 0.3s;
@@ -92,7 +92,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #646464;
+    background-color: #b079b4;
     visibility: visible;
     transition: all 0.3s;
 }
@@ -118,7 +118,7 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #252323;
+    background-color: #654564;
     visibility: visible;
     transition: all 0.3s;
 }
@@ -130,8 +130,8 @@
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: #646464;
-    color: #646464;
+    background-color: #896280;
+    color: #896280;
     visibility: visible;
     transition: all 0.3s;
 }
@@ -139,13 +139,13 @@
 
 .nav ul li a:focus {
     text-decoration: none;
-    color: #646464;
+    color: #896280;
     opacity: 1;
 }
 
 .nav ul li a:hover {
     text-decoration: none;
-    color: #646464;
+    color: #896280;
     opacity: 1;
 }
 
@@ -192,14 +192,14 @@
     font-size: 1rem;
     /* taille de police ajustée */
     text-transform: uppercase;
-    color: #000000;
+    color: rgb(197, 71, 178);
     display: block;
     text-decoration: none;
     transition: color 0.3s ease;
 }
 
 .nav-logo:hover {
-    color: #666;
+    color: rgb(197, 71, 178);
 }
 
 /* Hide the submenu by default */
@@ -228,7 +228,7 @@
 
 .nav ul li ul.submenu li a {
     padding: 10px 20px;
-    color: rgb(0, 0, 0);
+    color: rgb(197, 71, 178);
     display: block;
     text-align: left;
 }
@@ -248,7 +248,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(197, 71, 178);
     z-index: 9;
     transition: all 250ms linear;
 
@@ -284,7 +284,7 @@
     font-weight: 800;
     display: inline-block;
     position: relative;
-    color: rgb(250, 250, 250); 
+    color: rgb(197, 71, 178); 
     transition: all 250ms linear;
 
 }
@@ -298,7 +298,14 @@
     display: block;
     z-index: 11;
     transition: all 250ms linear;
-
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
+    font-weight: 800;
+    display: inline-block;
+    position: relative;
+    color: rgb(197, 71, 178);
 }
 
 .logo img {
@@ -311,12 +318,12 @@
 @media screen and (max-width: 991px) {
     .menu-icon {
         --s: 20px;
-        --c: black;
+        --c: rgb(197, 71, 178);
         height: var(--s);
         aspect-ratio: 1;
         border: none;
         padding: 0;
-        border-inline: calc(var(--s)/2) solid #0000;
+        border-inline: calc(var(--s)/2) solid transparent;
         box-sizing: content-box;
         --_g1: linear-gradient(var(--c) 20%, #0000 0 80%, var(--c) 0) no-repeat content-box border-box;
         --_g2: radial-gradient(circle closest-side at 50% 12.5%, var(--c) 95%, #0000) repeat-y content-box border-box;
@@ -324,7 +331,7 @@
         background-size: 20% 80%, 40% 100%;
         position: relative;
         clip-path: inset(0 25%);
-        -webkit-mask: linear-gradient(90deg, #0000, #000 25% 75%, #0000);
+        -webkit-mask: linear-gradient(90deg, rgb(197, 71, 178), rgb(197, 71, 178) 25% 75%, rgb(197, 71, 178));
         cursor: pointer;
         transition: background-position .3s var(--_s, .3s), clip-path 0s var(--_s, .6s);
         -webkit-appearance: none;
@@ -346,7 +353,7 @@
         position: absolute;
         border-radius: var(--s);
         inset: 40% 0;
-        background: rgb(29, 28, 28);
+        background: rgb(197, 71, 178);
         transition: transform .3s calc(.3s - var(--_s, .3s));
     }
 
@@ -385,14 +392,11 @@
         transition: all 250ms linear;
     }
 
-    .logo {
-        left: 30px;
-    }
 
     .nav {
         width: 100%;
         height: 100%;
-        background-color: #000000;
+        background-color: #f4aeed97;
         z-index: 10;
         transition: all 250ms linear;
         flex-direction: column;
@@ -428,7 +432,7 @@
 
     .nav ul li a:hover {
         text-decoration: none;
-        color: #646464;
+        color: #fe00c7;
         opacity: 1;
     }
 
@@ -476,7 +480,7 @@
 
     .menu-icon:checked+label+.nav ul li a:hover {
         text-decoration: none;
-        color: #646464;
+        color :#654564;
         opacity: 1;
     }
 
@@ -518,12 +522,14 @@
 
     .menu-icon:checked+label+.nav ul li ul.submenu li {
         width: 100%;
-        margin: 0;
-        padding: 0;
+
         display: block;
         text-align: center;
-        transition: all 0.3s ease;
-        background-color: #000000;
+        transition: all 0.3s ease;  
+        background-color: #ffffff00;
+        margin: 0;
+        padding: 0;
+        
     }
 
     .menu-icon:checked+label+.nav ul li ul.submenu li a {
@@ -535,6 +541,26 @@
 
     .menu-icon:checked+label+.nav ul li:hover ul.submenu {
         display: block;
+        color :#654564;
+    }
+
+    .menu-icon:checked+label+.nav ul li:hover ul.submenu li a {
+        padding: 10px 20px;
+        color: #654564;
+        display: block;
+        text-align: center;
+    }
+
+    .menu-icon:checked+label+.nav ul li a:hover::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #654564;
+        visibility: visible;
+        transition: all 0.3s;
     }
 
     .menu-icon:checked+label+.nav ul li a.active::before {
