--- a/style1.css
+++ b/style1.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
 :root {
     --bg-black-900: #f2f2fc;
     --bg-black-100: #fdf9ff;
     --bg-black-50: #e8dfec;
-    --text-black-900: #302e4d;
-    --text-black-700: #504e70;
+    --text-black-900: #cf78b2;
+    --text-black-700: #7a5077;
 
 }
 
@@ -13,12 +15,11 @@ body.dark {
     --bg-black-900: #151515;
     --bg-black-100: #222222;
     --bg-black-50: #393939;
-    --text-black-900: #ffffff;
-    --text-black-700: #e9e9e9;
+    --text-black-900: #cf78b2;
+    --text-black-700: #7a5077;
 }
 
 body {
-
     line-height: 1.5;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;    
@@ -44,6 +45,27 @@ body {
 ul {
     list-style: none;
 
+}
+
+h1{
+    color:#7a5077 ;
+}
+
+h2{
+    color: #cf78b2;
+}
+
+h3{
+    color: #9f668c;
+}
+
+strong{
+    color: #cf78b2;
+}
+
+li{
+    display: block;
+    
 }
 
 .section {
@@ -115,7 +137,7 @@ ul {
 .section-title h2 {
         font-family: 'Poppins', sans-serif;
     font-size: 40px;
-    color: #302e4d;
+    color: #5f3456;
     font-weight: 700;
     position: relative;
 
@@ -159,7 +181,7 @@ ul {
     display: inline-block;
     white-space: nowrap;
     border: none;
-    background: black;
+    background: rgb(118, 67, 116);
     transition: all 0.3s ease;
 }
 
@@ -387,8 +409,8 @@ h3.my-profession {
     position: absolute;
     height: 80px;
     width: 80px;
-    border-bottom: 10px solid #000;
-    border-right: 10px solid #000;
+    border-bottom: 10px solid #784472;
+    border-right: 10px solid #784472;
     right: 20px;
     bottom: -40px;
 }
@@ -398,8 +420,8 @@ h3.my-profession {
     position: absolute;
     height: 80px;
     width: 80px;
-    border-top: 10px solid #000;
-    border-left: 10px solid #000;
+    border-top: 10px solid #784472;
+    border-left: 10px solid #784472;
     left: -20px;
     top: -40px;
 }
@@ -430,7 +452,7 @@ h3.my-profession {
 }
 
 .about .about-content .about-text h3 span {
-    color: var(--skin-color);
+    color: var(--text-black-900);
 
 }
 
@@ -444,6 +466,7 @@ h3.my-profession {
     flex: 0 0 60%;
     max-width: 60%;
     margin-top: 40px;
+    color: #7a5077;
 }
 
 .about .about-content .personal-info .info-item {
@@ -478,6 +501,7 @@ h3.my-profession {
     flex: 0 0 40%;
     max-width: 40%;
     margin-top: 40px;
+        color: #7a5077;
 }
 
 .about .about-content .skills .skills-item {
@@ -551,6 +575,9 @@ h3.my-profession {
     width: 100%;
     position: relative;
 }
+
+.about .about-content .timeline i{
+    color: var(--text-black-700);}
 
 .about .about-content .timeline .timeline-item {
     position: relative;
@@ -920,13 +947,18 @@ a p {
     margin-bottom: 60px;
 }
 
+
+
 .contact .contact-info-item .icon {
     display: inline-block;
+    text-align: center;
 }
+
 
 .contact .contact-info-item .icon .fa {
     font-size: 25px;
     color: var(--skin-color);
+    text-align: center;
 }
 
 .contact .contact-info-item h4 {
@@ -1020,6 +1052,9 @@ a p {
         margin-left: 0;
     }
 
+    
+
+    
 }
 
 @media (max-width:991px) {
@@ -1038,9 +1073,34 @@ a p {
         max-width: 100%;
     }
 
-    .home .home-img {
-        display: none;
-    }
+                .home .home-img {
+                    flex: 0 0 100%;
+                    max-width: 100%;
+                }
+        
+                .home-img::after {
+                    height: 40px;
+                    width: 40px;
+                    border-bottom: 5px solid #784472;
+                    border-right: 5px solid #784472;
+                    right: 10px;
+                    bottom: -20px;
+                }
+        
+                .home-img::before {
+                    height: 40px;
+                    width: 40px;
+                    border-top: 5px solid #784472;
+                    border-left: 5px solid #784472;
+                    left: -10px;
+                    top: -20px;
+                }
+        
+                .home .home-img img {
+                    height: auto;
+                    width: 80%;
+                }
+    
 }
 
 @media (max-width : 767px) {
